Carrito linkeado a index

--- a/ecommerce_index.html
+++ b/ecommerce_index.html
@@ -27,7 +27,7 @@
                 <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#registro">Regístrate</a>
+                <a class="nav-link" href="ecommerce_cart.html">Carrito de compras</a>
               </li>
         
               <li class="nav-item dropdown">
@@ -151,8 +151,10 @@
                       Presione "Agregar al carrito" para continuar
                     </div>
                     <div class="modal-footer">
+                      <a class="btn-danger btn btn-secondary " href="ecommerce_cart.html">Ver carrito de compras</a>
                       <button type="button" id="Carrito" class="btn btn-secondary btn-success " data-toggle="modal">Agregar al carrito</button>
                     </div>
+                    
                   </div>
                 </div>
               </div>
@@ -236,6 +238,7 @@
                       Presione "Agregar al carrito" para continuar
                     </div>
                     <div class="modal-footer">
+                      <a class="btn-danger btn btn-secondary " href="ecommerce_cart.html">Ver carrito de compras</a>
                       <button type="button" id="Carrito" class="btn btn-secondary btn-success " data-toggle="modal">Agregar al carrito</button>
                     </div>
                   </div>
@@ -321,6 +324,7 @@
                       Presione "Agregar al carrito" para continuar
                     </div>
                     <div class="modal-footer">
+                      <a class="btn-danger btn btn-secondary " href="ecommerce_cart.html">Ver carrito de compras</a>
                       <button type="button" id="Carrito" class="btn btn-secondary btn-success " data-toggle="modal">Agregar al carrito</button>
                     </div>
                   </div>
@@ -407,6 +411,7 @@
                       Presione "Agregar al carrito" para continuar
                     </div>
                     <div class="modal-footer">
+                      <a class="btn-danger btn btn-secondary " href="ecommerce_cart.html">Ver carrito de compras</a>
                       <button type="button" id="Carrito" class="btn btn-secondary btn-success " data-toggle="modal">Agregar al carrito</button>
                     </div>
                   </div>
@@ -492,6 +497,7 @@
                       Presione "Agregar al carrito" para continuar
                     </div>
                     <div class="modal-footer">
+                      <a class="btn-danger btn btn-secondary " href="ecommerce_cart.html">Ver carrito de compras</a>
                       <button type="button" id="Carrito" class="btn btn-secondary btn-success " data-toggle="modal">Agregar al carrito</button>
                     </div>
                   </div>
@@ -580,6 +586,7 @@
                       Presione "Agregar al carrito" para continuar
                     </div>
                     <div class="modal-footer">
+                      <a class="btn-danger btn btn-secondary " href="ecommerce_cart.html">Ver carrito de compras</a>
                       <button type="button" id="Carrito" class="btn btn-secondary btn-success " data-toggle="modal">Agregar al carrito</button>
                     </div>
                   </div>
