cambios en nav y pagina de productos e index

--- a/ecommerce_index.html
+++ b/ecommerce_index.html
@@ -23,7 +23,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="ecommerce_index.html">Inicio <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#registro">Regístrate</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="ecommerce_cart.html">Carrito de compras</a>
@@ -174,7 +177,7 @@
                     </div>
                   </div>
                 </div>
-              </div>              <button type="button" class="btn btn-secondary btn-danger">Ver producto</button>
+              </div>              <button type="button" class="btn btn-secondary btn-danger"><a class="verpro" href="producto_1.html">producto</a> </button>
             </div>
           </div>
         </div>
