Cambio de paginas productos
Cambio de paginas productos

--- a/ecommerce_index.html
+++ b/ecommerce_index.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">
     <div class="row">
       <nav class="navbar navbar-expand-lg  navbar-dark bg-dark container-fluid fixed-top">
-          <a class="navbar-brand" href="#">Voilet House</a>
+          <a class="navbar-brand" href="commerce_index.html">Voilet House</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -177,7 +177,8 @@
                     </div>
                   </div>
                 </div>
-              </div>              <button type="button" class="btn btn-secondary btn-danger"><a class="verpro" href="producto_1.html">producto</a> </button>
+              </div>
+              <button type="button" class="btn btn-secondary btn-danger"><a class="verpro" href="producto_1.html">Ver producto</a> </button>
             </div>
           </div>
         </div>
@@ -263,7 +264,8 @@
                     </div>
                   </div>
                 </div>
-              </div>              <button type="button" class="btn btn-secondary btn-danger">Ver producto</button>
+              </div>              
+              <button type="button" class="btn btn-secondary btn-danger"><a class="verpro" href="producto_2.html">Ver producto</a> </button>
             </div>
           </div>
         </div>
@@ -349,7 +351,8 @@
                     </div>
                   </div>
                 </div>
-              </div>              <button type="button" class="btn btn-secondary btn-danger">Ver producto</button>
+              </div>              
+              <button type="button" class="btn btn-secondary btn-danger"><a class="verpro" href="producto_6.html">Ver producto</a> </button>
             </div>
           </div>
         </div>
@@ -436,7 +439,8 @@
                     </div>
                   </div>
                 </div>
-              </div>              <button type="button" class="btn btn-secondary btn-danger">Ver producto</button>
+              </div>              
+              <button type="button" class="btn btn-secondary btn-danger"><a class="verpro" href="producto_3.html">Ver producto</a> </button>
             </div>
           </div>
         </div>
@@ -523,7 +527,7 @@
                   </div>
                 </div>
               </div>
-              <button type="button" class="btn btn-secondary btn-danger">Ver producto</button>
+              <button type="button" class="btn btn-secondary btn-danger"><a class="verpro" href="producto_4.html">Ver producto</a> </button>
             </div>  
           </div>
         </div>
@@ -613,7 +617,7 @@
                 </div>
               </div>
 
-              <button type="button" class="btn btn-secondary btn-danger">Ver producto</button>
+              <button type="button" class="btn btn-secondary btn-danger"><a class="verpro" href="producto_5.html">Ver producto</a> </button>
             </div>
           </div>
         </div>
