--- a/ecommerce_cart.html
+++ b/ecommerce_cart.html
@@ -17,7 +17,7 @@
       <div class="container-fluid">
         <div class="row">
           <nav class="navbar navbar-expand-lg  navbar-dark bg-dark container-fluid fixed-top">
-            <a class="navbar-brand" href="#">Voilet House</a>
+            <a class="navbar-brand" href="commerce_index.html">Voilet House</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
