Agregando info Josh s/cambios

--- a/ecommerce_index.html
+++ b/ecommerce_index.html
@@ -16,14 +16,17 @@
     <div class="container-fluid">
     <div class="row">
       <nav class="navbar navbar-expand-lg  navbar-dark bg-dark container-fluid fixed-top">
-          <a class="navbar-brand" href="#">Voilet House</a>
+          <a class="navbar-brand" href="commerce_index.html">Voilet House</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="ecommerce_index.html">Inicio <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#registro">Regístrate</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="ecommerce_cart.html">Carrito de compras</a>
@@ -174,7 +177,8 @@
                     </div>
                   </div>
                 </div>
-              </div>              <button type="button" class="btn btn-secondary btn-danger">Ver producto</button>
+              </div>
+              <button type="button" class="btn btn-secondary btn-danger"><a class="verpro" href="producto_1.html">Ver producto</a> </button>
             </div>
           </div>
         </div>
@@ -260,7 +264,8 @@
                     </div>
                   </div>
                 </div>
-              </div>              <button type="button" class="btn btn-secondary btn-danger">Ver producto</button>
+              </div>              
+              <button type="button" class="btn btn-secondary btn-danger"><a class="verpro" href="producto_2.html">Ver producto</a> </button>
             </div>
           </div>
         </div>
@@ -346,7 +351,8 @@
                     </div>
                   </div>
                 </div>
-              </div>              <button type="button" class="btn btn-secondary btn-danger">Ver producto</button>
+              </div>              
+              <button type="button" class="btn btn-secondary btn-danger"><a class="verpro" href="producto_6.html">Ver producto</a> </button>
             </div>
           </div>
         </div>
@@ -433,7 +439,8 @@
                     </div>
                   </div>
                 </div>
-              </div>              <button type="button" class="btn btn-secondary btn-danger">Ver producto</button>
+              </div>              
+              <button type="button" class="btn btn-secondary btn-danger"><a class="verpro" href="producto_3.html">Ver producto</a> </button>
             </div>
           </div>
         </div>
@@ -520,7 +527,7 @@
                   </div>
                 </div>
               </div>
-              <button type="button" class="btn btn-secondary btn-danger">Ver producto</button>
+              <button type="button" class="btn btn-secondary btn-danger"><a class="verpro" href="producto_4.html">Ver producto</a> </button>
             </div>  
           </div>
         </div>
@@ -610,7 +617,7 @@
                 </div>
               </div>
 
-              <button type="button" class="btn btn-secondary btn-danger">Ver producto</button>
+              <button type="button" class="btn btn-secondary btn-danger"><a class="verpro" href="producto_5.html">Ver producto</a> </button>
             </div>
           </div>
         </div>
