--- a/ecommerce_cart.html
+++ b/ecommerce_cart.html
@@ -17,37 +17,40 @@
       <div class="container-fluid">
         <div class="row">
           <nav class="navbar navbar-expand-lg  navbar-dark bg-dark container-fluid fixed-top">
-              <a class="navbar-brand" href="#">Voilet House</a>
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                  <li class="nav-item active">
-                    <a class="nav-link" href="ecommerce_index.html">Inicio <span class="sr-only">(current)</span></a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#registro-cart">Regístrate</a>
-                  </li>
-            
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Nuestros Productos
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="#">Blusas</a>
-                      <a class="dropdown-item" href="#">Pantalones</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#">Zapatos</a>
-                    </div>
-                  </li>
-                </ul>
-                <form class=" form-inline my-2 my-lg-0">
-                  <input class="form-control mr-sm-2" type="search" placeholder="¿Que miray?" aria-label="Search">
-                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
-                </form>
-              </div>
-            </nav>
+            <a class="navbar-brand" href="commerce_index.html">Voilet House</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="ecommerce_index.html">Inicio <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#registro">Regístrate</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="ecommerce_cart.html">Carrito de compras</a>
+                </li>
+          
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Nuestros Productos
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Blusas</a>
+                    <a class="dropdown-item" href="#">Pantalones</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Zapatos</a>
+                  </div>
+                </li>
+              </ul>
+              <form class=" form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="¿Que miray?" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+              </form>
+            </div>
+          </nav>
           </div>
           </div>
 
