--- a/ecommerce_cart.html
+++ b/ecommerce_cart.html
@@ -56,7 +56,7 @@
 
 
           <div id="img-cart" class="card text-white footer">
-            <img class="card-img img_cart" src="img/f2.jpg" alt="Card image">
+            <img class="card-img img_cart" src="img/c4.jpg" alt="Card image">
             <div class="card-img-overlay">
               <h5 class="card-title">Violet House</h5>
               <p class="card-text">
@@ -93,7 +93,7 @@
                     </table>
                 </div>  
                 <div class="justify-content-end">
-                    <h2>El total es $27.990.-
+                    <h2 class="text_cart">El total es $27.990.-
                        <span class="badge ">
                          <a class=" btn btn-secondary " href="ecommerce_index.html">Bacán, continúa comprando</a></span></h2>
                 </div>
@@ -101,7 +101,7 @@
             </div>
           </div>
           <div id="registro-cart" class="card text-white footer img_cart">
-            <img class="card-img " src="img/f4.jpg" alt="Card image">
+            <img class="card-img " src="img/footer.jpg" alt="Card image">
             <div class="card-img-overlay">
               <h5 class="card-title">Registro Comprador</h5>
               <p class="card-text">
@@ -164,7 +164,7 @@
           </div>
 
           <div id="pago-cart" class="card text-white footer ">
-            <img class="card-img" src="img/f4.jpg" alt="Card image">
+            <img class="card-img" src="img/f2.jpg" alt="Card image">
             <div class="card-img-overlay">
               <h5 class="card-title">Método de pago</h5>
               <p class="card-text">
